// Copyright 2023 Minsoo Cheong
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

package com.example.rpc;

option java_package = "io.github.mscheong01.rpc";

service RpcService {

  // unary rpc
  rpc UnaryTest(UnaryRequest) returns (UnaryResponse) {}

  // server streaming rpc
  rpc ServerStreamingTest(ServerStreamingRequest) returns (stream ServerStreamingResponse) {}

  // client streaming rpc
  rpc ClientStreamingTest(stream ClientStreamingRequest) returns (ClientStreamingResponse) {}

  // bidirectional streaming rpc
  rpc BidirectionalStreamingTest(stream BidirectionalStreamingRequest) returns (stream BidirectionalStreamingResponse) {}

}

service CommonMessageUseService {
  rpc UnaryRPC(CommonRequest) returns (CommonResponse) {}
  rpc ServerStreamingRPC(CommonRequest) returns (stream CommonResponse) {}
  rpc ClientStreamingRPC(stream CommonRequest) returns (CommonResponse) {}
  rpc BidirectionalStreamingRPC(stream CommonRequest) returns (stream CommonResponse) {}
}

service WellKnownTypeUseService {
  rpc EchoEmpty(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc EchoString(google.protobuf.StringValue) returns (google.protobuf.StringValue) {}
  rpc EchoBytes(google.protobuf.BytesValue) returns (google.protobuf.BytesValue) {}
  rpc EchoInt32(google.protobuf.Int32Value) returns (google.protobuf.Int32Value) {}
  rpc EchoInt64(google.protobuf.Int64Value) returns (google.protobuf.Int64Value) {}
  rpc EchoUInt32(google.protobuf.UInt32Value) returns (google.protobuf.UInt32Value) {}
  rpc EchoUInt64(google.protobuf.UInt64Value) returns (google.protobuf.UInt64Value) {}
  rpc EchoFloat(google.protobuf.FloatValue) returns (google.protobuf.FloatValue) {}
  rpc EchoDouble(google.protobuf.DoubleValue) returns (google.protobuf.DoubleValue) {}
  rpc EchoBool(google.protobuf.BoolValue) returns (google.protobuf.BoolValue) {}
  rpc EchoTimestamp(google.protobuf.Timestamp) returns (google.protobuf.Timestamp) {}
  rpc EchoDuration(google.protobuf.Duration) returns (google.protobuf.Duration) {}
  rpc EchoStruct(google.protobuf.Struct) returns (google.protobuf.Struct) {}
  rpc EchoAny(google.protobuf.Any) returns (google.protobuf.Any) {}
}

message UnaryRequest {
  string name = 1;
}

message UnaryResponse {
  string message = 1;
}

message ServerStreamingRequest {
  string name = 1;
}

message ServerStreamingResponse {
  string message = 1;
}

message ClientStreamingRequest {
  string name = 1;
}

message ClientStreamingResponse {
  string message = 1;
}

message BidirectionalStreamingRequest {
  string name = 1;
}

message BidirectionalStreamingResponse {
  string message = 1;
}

message CommonRequest {
  string name = 1;
}

message CommonResponse {
  string message = 1;
}
